@@ -1069,13 +1069,13 @@ string:
     string
     STRING
     {
-        stringbuf = xstrcat(stringbuf, string);/* catenate the new string */
+        stringbuf = xstrcat(stringbuf, lexstring);/* catenate the new string */
     }
 |
     STRING
     {
         free(stringbuf);                    /* free former string */
-        stringbuf = xstrdup(string);        /* duplicate initial string */
+        stringbuf = xstrdup(lexstring);     /* duplicate initial string */
     }
 ;
 
